--- a/NorthMVC/NorthMVC.csproj
+++ b/NorthMVC/NorthMVC.csproj
@@ -184,6 +184,7 @@
     <Content Include="Views\Category\Yeni.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Product\Detay.cshtml" />
+    <Content Include="Views\Product\Yeni.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
