--- a/NorthMVC/packages.config
+++ b/NorthMVC/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.5.8" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
